Set maxRunTime to be the lesser of maxRunTime setting and app defaultMaxRunTime. Add app detail to the new job page.

--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -28,3 +28,4 @@ input_home: '/agave_data'
 output_url: 'http://www.maizecode.org'
 email: 'noreply@maizecode.org'
 upload_suffix: ".upload"
+maxRunTime: "96:00:00"
