--- a/agavedancer/config.yml
+++ b/agavedancer/config.yml
@@ -35,9 +35,12 @@ engines:
     convert_blessed: '1'
     allow_blessed: '1'
 
-#plugins:
+plugins:
+  'Ajax':
+    content_type: 'application/json'
 #  MemcachedFast:
 #    servers:
 #      - "127.0.0.1:11211"
 #    default_timeout: 1800
 #    namespace: "agaveapidemo:"
+
