Added TO_JSON in agavedancer/lib/Agave/Client/Object/Job.pm

--- a/agavedancer/public/assets/agaveAppsList.json
+++ b/agavedancer/public/assets/agaveAppsList.json
@@ -1,74 +1,306 @@
 [
-  {
-    "id": "AVCP-5.2.15",
-    "name": "AVCP"
-  },
-  {
-    "id": "NAM-TASSEL-5.2.15",
-    "name": "NAM-TASSEL"
-  },
-  {
-    "id": "GenSel-0.4.55",
-    "name": "GenSel"
-  },
-  {
-    "id": "EMMAX-0.0.2",
-    "name": "EMMAX"
-  },
-  {
-    "id": "AdjustPvalue-0.0.1",
-    "name": "AdjustPvalue"
-  },
-  {
-    "id": "fastStructure-0.0.1",
-    "name": "fastStructure"
-  },
-  {
-    "id": "MergeG2P-0.0.2",
-    "name": "MergeG2P"
-  },
-  {
-    "id": "MLMM-0.0.2",
-    "name": "MLMM"
-  },
-  {
-    "id": "XYPlot-0.0.2",
-    "name": "XYPlot"
-  },
-  {
-    "id": "NPUTE-0.0.1",
-    "name": "NPUTE"
-  },
-  {
-    "id": "PCA-0.0.1",
-    "name": "PCA"
-  },
-  {
-    "id": "GenomeSelection-TASSEL-4.3.15",
-    "name": "GenomeSelection-TASSEL"
-  },
-  {
-    "id": "GLM-TASSEL-5.1.23",
-    "name": "GLM-TASSEL"
-  },
-  {
-    "id": "MLM-TASSEL-5.1.23",
-    "name": "MLM-TASSEL"
-  },
-  {
-    "id": "NumericalTransform-TASSEL-4.3.15",
-    "name": "NumericalTransform-TASSEL"
-  },
-  {
-    "id": "ConvertTraitID-0.0.0",
-    "name": "ConvertTraitID"
-  },
-  {
-    "id": "STRUCTURE2TASSEL-0.0.2",
-    "name": "STRUCTURE2TASSEL"
-  },
-  {
-    "id": "CloudSTRUCTURE-2.3.4",
-    "name": "CloudSTRUCTURE"
-  }
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/CIM-0.1.17"
+            }
+        }, 
+        "executionSystem": "cshl-compute-00", 
+        "id": "CIM-0.1.17", 
+        "isPublic": false, 
+        "label": "Composite interval mapping via QTL Cartographer", 
+        "lastModified": "2015-12-16T09:30:03.000-06:00", 
+        "name": "CIM", 
+        "revision": 6, 
+        "shortDescription": "Composite interval mapping", 
+        "version": "0.1.17"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/VCAP-5.2.15"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "VCAP-5.2.15", 
+        "isPublic": false, 
+        "label": "VCAP", 
+        "lastModified": "2015-12-01T20:09:19.000-06:00", 
+        "name": "VCAP", 
+        "revision": 7, 
+        "shortDescription": "VCAP", 
+        "version": "5.2.15"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/NAM-TASSEL-5.2.15"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "NAM-TASSEL-5.2.15", 
+        "isPublic": false, 
+        "label": "NAM", 
+        "lastModified": "2015-10-25T00:39:35.000-05:00", 
+        "name": "NAM-TASSEL", 
+        "revision": 1, 
+        "shortDescription": "NAM GWAS", 
+        "version": "5.2.15"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/GenSel-0.4.55"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "GenSel-0.4.55", 
+        "isPublic": false, 
+        "label": "GenSel", 
+        "lastModified": "2015-10-24T02:35:11.000-05:00", 
+        "name": "GenSel", 
+        "revision": 1, 
+        "shortDescription": "", 
+        "version": "0.4.55"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/EMMAX-0.0.2"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "EMMAX-0.0.2", 
+        "isPublic": false, 
+        "label": "EMMAX", 
+        "lastModified": "2015-10-05T14:17:25.000-05:00", 
+        "name": "EMMAX", 
+        "revision": 3, 
+        "shortDescription": "Efficient Mixed-Model Association eXpedited", 
+        "version": "0.0.2"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/AdjustPvalue-0.0.1"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "AdjustPvalue-0.0.1", 
+        "isPublic": false, 
+        "label": "AdjustPvalue", 
+        "lastModified": "2015-10-05T14:12:30.000-05:00", 
+        "name": "AdjustPvalue", 
+        "revision": 4, 
+        "shortDescription": "Adjust P-values for multiple comparisons", 
+        "version": "0.0.1"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/fastStructure-0.0.1"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "fastStructure-0.0.1", 
+        "isPublic": false, 
+        "label": "FastStructure", 
+        "lastModified": "2015-10-05T12:45:57.000-05:00", 
+        "name": "fastStructure", 
+        "revision": 14, 
+        "shortDescription": "Inferring population structure from large SNP genotype data", 
+        "version": "0.0.1"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/MergeG2P-0.0.2"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "MergeG2P-0.0.2", 
+        "isPublic": false, 
+        "label": "MergeG2P", 
+        "lastModified": "2015-10-04T21:33:08.000-05:00", 
+        "name": "MergeG2P", 
+        "revision": 4, 
+        "shortDescription": "Intersecting genotype data with phenotype data", 
+        "version": "0.0.2"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/MLMM-0.0.2"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "MLMM-0.0.2", 
+        "isPublic": false, 
+        "label": "MLMM", 
+        "lastModified": "2015-10-04T21:06:47.000-05:00", 
+        "name": "MLMM", 
+        "revision": 3, 
+        "shortDescription": "Multi-locus Mixed-Model Association", 
+        "version": "0.0.2"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/XYPlot-0.0.2"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "XYPlot-0.0.2", 
+        "isPublic": false, 
+        "label": "XYPlot", 
+        "lastModified": "2015-10-03T23:57:05.000-05:00", 
+        "name": "XYPlot", 
+        "revision": 5, 
+        "shortDescription": "Create 2D Plot", 
+        "version": "0.0.2"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/NPUTE-0.0.1"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "NPUTE-0.0.1", 
+        "isPublic": false, 
+        "label": "NPUTE", 
+        "lastModified": "2015-10-03T21:08:14.000-05:00", 
+        "name": "NPUTE", 
+        "revision": 3, 
+        "shortDescription": "Imputing missing SNPs", 
+        "version": "0.0.1"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/PCA-0.0.1"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "PCA-0.0.1", 
+        "isPublic": false, 
+        "label": "PCA", 
+        "lastModified": "2015-10-03T19:42:58.000-05:00", 
+        "name": "PCA", 
+        "revision": 3, 
+        "shortDescription": "Perform PCA with R's prcomp function", 
+        "version": "0.0.1"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/GenomeSelection-TASSEL-4.3.15"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "GenomeSelection-TASSEL-4.3.15", 
+        "isPublic": false, 
+        "label": "Genome Selection", 
+        "lastModified": "2015-10-03T19:41:37.000-05:00", 
+        "name": "GenomeSelection-TASSEL", 
+        "revision": 2, 
+        "shortDescription": "Ridge regression based genomic selection", 
+        "version": "4.3.15"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/GLM-TASSEL-5.1.23"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "GLM-TASSEL-5.1.23", 
+        "isPublic": false, 
+        "label": "GLM", 
+        "lastModified": "2015-10-03T19:41:23.000-05:00", 
+        "name": "GLM-TASSEL", 
+        "revision": 2, 
+        "shortDescription": "General Linear Model analysis", 
+        "version": "5.1.23"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/MLM-TASSEL-5.1.23"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "MLM-TASSEL-5.1.23", 
+        "isPublic": false, 
+        "label": "MLM", 
+        "lastModified": "2015-10-03T19:41:16.000-05:00", 
+        "name": "MLM-TASSEL", 
+        "revision": 2, 
+        "shortDescription": "Mixed Linear Model analysis", 
+        "version": "5.1.23"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/NumericalTransform-TASSEL-4.3.15"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "NumericalTransform-TASSEL-4.3.15", 
+        "isPublic": false, 
+        "label": "NumericalTransform", 
+        "lastModified": "2015-10-03T19:41:07.000-05:00", 
+        "name": "NumericalTransform-TASSEL", 
+        "revision": 2, 
+        "shortDescription": "Numerical Transform of marker data", 
+        "version": "4.3.15"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/ConvertTraitID-0.0.0"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "ConvertTraitID-0.0.0", 
+        "isPublic": false, 
+        "label": "ConvertTraitID", 
+        "lastModified": "2015-10-03T19:38:54.000-05:00", 
+        "name": "ConvertTraitID", 
+        "revision": 3, 
+        "shortDescription": "Resolving accession name with accession id", 
+        "version": "0.0.0"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/STRUCTURE2TASSEL-0.0.2"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "STRUCTURE2TASSEL-0.0.2", 
+        "isPublic": false, 
+        "label": "STRUCTURE2TASSEL", 
+        "lastModified": "2015-10-03T19:36:49.000-05:00", 
+        "name": "STRUCTURE2TASSEL", 
+        "revision": 4, 
+        "shortDescription": "Converting STRUCTURE output for TASSEL", 
+        "version": "0.0.2"
+    }, 
+    {
+        "_links": {
+            "self": {
+                "href": "https://agave.iplantc.org/apps/v2/CloudSTRUCTURE-2.3.4"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "CloudSTRUCTURE-2.3.4", 
+        "isPublic": false, 
+        "label": "CloudStructure", 
+        "lastModified": "2015-10-03T19:28:26.000-05:00", 
+        "name": "CloudSTRUCTURE", 
+        "revision": 6, 
+        "shortDescription": "Estimating population structure", 
+        "version": "2.3.4"
+    }
 ]
