fix iplant datastore address

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -40,3 +40,4 @@ output_url: 'http://www.maizecode.org'
 email: 'noreply@maizecode.org'
 upload_suffix: ".upload"
 maxRunTime: "96:00:00"
+iplant_datastore: 'agave://data.iplantcollaborative.org/'
