--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -18,15 +18,15 @@ route_cache: 1
 
 # production config
 agave_config: ".agave"
-host_url: "http://agave.maizecode.org"
+host_url: "http://www.sciapps.org/"
 archive_system: 'brie.cshl.edu'
 archive_path: 'results'
 archive_home: '/agave_data'
 input_system: 'brie.cshl.edu'
 input_path: 'inputs'
 input_home: '/agave_data'
-output_url: 'http://www.maizecode.org'
+output_url: 'http://data.sciapps.org'
 email: 'noreply@maizecode.org'
 upload_suffix: ".upload"
 maxRunTime: "96:00:00"
-iplant_datastore: 'agave://data.iplantcollaborative.org/'
+datastore_system: 'data.sciapps.org'
