--- a/agavedancer/public/assets/agaveAppsList.json
+++ b/agavedancer/public/assets/agaveAppsList.json
@@ -13,6 +13,9 @@
         "name": "VCAP-Kinships", 
         "revision": 5, 
         "shortDescription": "VCAP Kinship", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "5.2.15"
     }, 
     {
@@ -29,6 +32,10 @@
         "name": "CIM", 
         "revision": 6, 
         "shortDescription": "Composite interval mapping", 
+    		"tags": [
+							"CIM",
+							"QTL"
+    		], 
         "version": "0.1.17"
     }, 
     {
@@ -45,6 +52,9 @@
         "name": "VCAP", 
         "revision": 7, 
         "shortDescription": "VCAP", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "5.2.15"
     }, 
     {
@@ -61,6 +71,9 @@
         "name": "NAM-TASSEL", 
         "revision": 1, 
         "shortDescription": "NAM GWAS", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "5.2.15"
     }, 
     {
@@ -77,6 +90,9 @@
         "name": "GenSel", 
         "revision": 1, 
         "shortDescription": "", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.4.55"
     }, 
     {
@@ -93,6 +109,9 @@
         "name": "EMMAX", 
         "revision": 3, 
         "shortDescription": "Efficient Mixed-Model Association eXpedited", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.2"
     }, 
     {
@@ -109,6 +128,9 @@
         "name": "AdjustPvalue", 
         "revision": 4, 
         "shortDescription": "Adjust P-values for multiple comparisons", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.1"
     }, 
     {
@@ -125,6 +147,9 @@
         "name": "fastStructure", 
         "revision": 14, 
         "shortDescription": "Inferring population structure from large SNP genotype data", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.1"
     }, 
     {
@@ -141,6 +166,9 @@
         "name": "MergeG2P", 
         "revision": 4, 
         "shortDescription": "Intersecting genotype data with phenotype data", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.2"
     }, 
     {
@@ -157,6 +185,9 @@
         "name": "MLMM", 
         "revision": 3, 
         "shortDescription": "Multi-locus Mixed-Model Association", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.2"
     }, 
     {
@@ -173,6 +204,9 @@
         "name": "XYPlot", 
         "revision": 5, 
         "shortDescription": "Create 2D Plot", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.2"
     }, 
     {
@@ -189,6 +223,9 @@
         "name": "NPUTE", 
         "revision": 3, 
         "shortDescription": "Imputing missing SNPs", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.1"
     }, 
     {
@@ -205,6 +242,9 @@
         "name": "PCA", 
         "revision": 3, 
         "shortDescription": "Perform PCA with R's prcomp function", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.1"
     }, 
     {
@@ -221,6 +261,9 @@
         "name": "GenomeSelection-TASSEL", 
         "revision": 2, 
         "shortDescription": "Ridge regression based genomic selection", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "4.3.15"
     }, 
     {
@@ -237,6 +280,9 @@
         "name": "GLM-TASSEL", 
         "revision": 2, 
         "shortDescription": "General Linear Model analysis", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "5.1.23"
     }, 
     {
@@ -253,6 +299,9 @@
         "name": "MLM-TASSEL", 
         "revision": 2, 
         "shortDescription": "Mixed Linear Model analysis", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "5.1.23"
     }, 
     {
@@ -269,6 +318,9 @@
         "name": "NumericalTransform-TASSEL", 
         "revision": 2, 
         "shortDescription": "Numerical Transform of marker data", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "4.3.15"
     }, 
     {
@@ -285,6 +337,9 @@
         "name": "ConvertTraitID", 
         "revision": 3, 
         "shortDescription": "Resolving accession name with accession id", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.0"
     }, 
     {
@@ -301,6 +356,9 @@
         "name": "STRUCTURE2TASSEL", 
         "revision": 4, 
         "shortDescription": "Converting STRUCTURE output for TASSEL", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "0.0.2"
     }, 
     {
@@ -317,6 +375,9 @@
         "name": "CloudSTRUCTURE", 
         "revision": 6, 
         "shortDescription": "Estimating population structure", 
+    		"tags": [
+        		"GWAS"
+    		], 
         "version": "2.3.4"
     }
 ]
