--- a/agavedancer/public/assets/agaveAppsList.json
+++ b/agavedancer/public/assets/agaveAppsList.json
@@ -2,6 +2,25 @@
     {
         "_links": {
             "self": {
+                "href": "https://agave.iplantc.org/apps/v2/queryGramene-0.0.1"
+            }
+        }, 
+        "executionSystem": "cshl-compute-10", 
+        "id": "queryGramene-0.0.1", 
+        "isPublic": false, 
+        "label": "queryGramene", 
+        "lastModified": "2016-03-03T10:40:32.000-06:00", 
+        "name": "queryGramene", 
+        "revision": 7, 
+        "shortDescription": "Query Gramene database", 
+        "tags": [
+                "Database"
+        ],
+        "version": "0.0.1"
+    }, 
+    {
+        "_links": {
+            "self": {
                 "href": "https://agave.iplantc.org/apps/v2/MAKER-0.0.1"
             }
         }, 
