--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -41,3 +41,4 @@ email: 'noreply@sciapps.org'
 upload_suffix: ".upload"
 maxRunTime: "96:00:00"
 datastore_system: 'data.sciapps.org'
+uncompress_suffix: '.open.tar.gz'
