workflow apps info

--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -31,19 +31,18 @@ auto_reload: 0
 agave_config: ".agave"
 host_url: "http://dev1.sciapps.org"
 archive_system: 'brie.cshl.edu'
-archive_path: 'results'
 archive_home: '/agave_data'
+archive_path: 'results'
 input_system: 'brie.cshl.edu'
-input_path: 'inputs'
 input_home: '/agave_data'
-output_url: 'http://data.sciapps.org'
+input_path: 'inputs'
+datastore_home: '/halcott'
+datastore_path: 'example_data'
+output_url: 'http://dev2.sciapps.org'
 email: 'noreply@sciapps.org'
 upload_suffix: ".upload"
-wf_step_prefix: 'wf:step:'
+wf_step_prefix: 'wf_step_'
 maxRunTime: "96:00:00"
 datastore_system: 'data.sciapps.org'
 uncompress_suffix: '.open.tar.gz'
-file_server: 'brie7'
-file_root: '/wildcat'
-file_user: 'scopy'
 use_file_server: 1
