--- a/agavedancer/environments/production.yml
+++ b/agavedancer/environments/production.yml
@@ -33,7 +33,7 @@ input_home: '/agave_data'
 input_path: 'inputs'
 datastore_home: '/agave_data'
 datastore_path: 'example_data'
-output_url: 'http://data.sciapps.org'
+#output_url: 'http://data.sciapps.org'
 email: 'noreply@sciapps.org'
 upload_suffix: ".upload"
 wf_step_prefix: 'wf_step_'
