--- a/agavedancer/package.json
+++ b/agavedancer/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
     "react-layout-pane": "^0.1.14",
+    "react-router": "^3.0.2",
     "reflux": "^0.3.0",
     "uglifyify": "^3.0.1"
   },
