--- a/agavedancer/config.yml
+++ b/agavedancer/config.yml
@@ -56,7 +56,7 @@ plugins:
     cas_version: "2.0"
 
 output_url:
-  brie.cshl.edu: 'http://dev2.sciapps.org'
-  halcott.cshl.edu: 'http://data.sciapps.org'
-  dev2.sciapps.org: 'http://dev2.sciapps.org'
-  data.sciapps.org: 'http://data.sciapps.org'
+  brie.cshl.edu: 'https://dev2.sciapps.org'
+  halcott.cshl.edu: 'https://data.sciapps.org'
+  dev2.sciapps.org: 'https://dev2.sciapps.org'
+  data.sciapps.org: 'https://data.sciapps.org'
