--- a/agavedancer/package.json
+++ b/agavedancer/package.json
@@ -16,6 +16,7 @@
     "q": "^1.4.1",
     "react": "^0.14.2",
     "react-bootstrap": "^0.27.3",
+    "react-bootstrap-dialog": "^0.9.1",
     "react-dom": "^0.14.2",
     "react-layout-pane": "^0.1.14",
     "reflux": "^0.3.0",
