Config de.sciapps.org

--- a/agavedancer/config.yml
+++ b/agavedancer/config.yml
@@ -61,3 +61,4 @@ output_url:
   halcott.cshl.edu: 'https://data.sciapps.org'
   dev2.sciapps.org: 'https://dev2.sciapps.org'
   data.sciapps.org: 'https://data.sciapps.org'
+  de.sciapps.org: 'https://data.sciapps.org'
