--- a/agavedancer/environments/development.yml
+++ b/agavedancer/environments/development.yml
@@ -50,13 +50,17 @@ datastore:
     home: '/iplant/home'
     path: 'shared'
   __public__:
-    system: 'data.sciapps.org'
-    home: '/halcott'
+    system: '1970491483740115431-242ac113-0001-007'
+    home: ''
     path: 'example_data'
   __system__:
     system: ''
     home: ''
     path: ''
+  __output__:
+    system: '1970491483740115431-242ac113-0001-007'
+    home: ''
+    path: 'example_data'
 uncompress_suffix: '.open.tar.gz'
 use_file_server: 1
 irodsEnvFile: '/usr/share/httpd/irodsEnv'
